# ifont_backend

./: pyproject.toml
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
app/: main.py
app/routers/: text_mask.py
app/utils/: text_mask.py  text_mask_sam.py
